# metric-collector

./: Cargo.toml  README.md  install.sh
.github/workflows/: release.yml
deploy/collector/: .env.example  Caddyfile  README.md  docker-compose.yml
docs/: adapter-fidelity.md  claude-code.md  deployment-runbook.md  design-decisions.md  desktop-mcp.md  distribution.md  install-and-app-flows.md  live-testing.md  privacy.md  producing-comparison-numbers.md  study-workflow.md  tasks.md  tester-invitation.md  tester-quickstart.md  upload-schema.md
examples/: tasks.yaml
schemas/: upload-payload-v1.schema.json
scripts/: collector-dashboard-smoke.py  collector-e2e-smoke.py  install-smoke.sh  live-agent-matrix.sh  package-release.sh  release-install-smoke.sh  study-workflow-smoke.sh  timed-onboarding-smoke.sh
server/collector/: Dockerfile  README.md
src/: adapter_validation.rs  classifier.rs  claude_hooks.rs  cli_report.rs  cli_run.rs  completion.rs  core.rs  coverage.rs  digest.rs  doctor.rs  hook_calibration.rs  hook_capture.rs  install.rs  lib.rs  live_test.rs  main.rs  mcp_git.rs  metadata.rs  mode.rs  proxy.rs  proxy_attribution.rs  proxy_privacy.rs  proxy_setup.rs  proxy_usage.rs  report.rs  report_diagnostics.rs  report_json.rs  report_markdown.rs  report_quality.rs  rules.rs  run.rs  scheduler.rs  setup.rs  share.rs  structured_import.rs  tasks.rs  token_estimator.rs  transcript.rs  transcript_import.rs  transcript_privacy.rs  (+1 more)
tests/: upload_schema_privacy.rs
tests/fixtures/: upload-payload-v1.forbidden.json  upload-payload-v1.valid.json
(+10 files in other folders)
